# Insider-threat-detection

./: .env.example  .gitignore  CONTRIBUTING.md  IRM_Project_MasterPrompt.md  LICENSE  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/airs/: README.md  config.yaml  feedback.py  inference.py  model.py  train.py
backend/api/: README.md  db.py  main.py
backend/api/models/: activity.py  feedback.py  score.py  user.py
backend/api/routes/: explain.py  feedback.py  policy.py  recommend.py  score.py
backend/data_pipeline/: README.md  config.py  filter_cert.py  preprocess.py
backend/explainability/: README.md  shap_explainer.py  visualize.py
backend/llm_service/: README.md  config.yaml  prompts.py  recommend.py  safety.py
backend/llm_service/providers/: base.py  groq_provider.py  ollama_provider.py
backend/policy_engine/: README.md  engine.py  rules.py
backend/prism/: README.md  buckets.py  scorer.py  weights.yaml
backend/tests/: test_airs.py  test_api.py  test_explainability.py  test_policy_engine.py  test_prism.py
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: project_report.md
docs/weekly_logs/: week1.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  feedback.ts  policy.ts  scoring.ts
frontend/src/components/: ActivityTimeline.tsx  RiskBadge.tsx  ScoreSlider.tsx  ShapExplanationPanel.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: FeedbackPanel.tsx  Overview.tsx  PolicyFeed.tsx  UserDrilldown.tsx
(+2 files in other folders)
